--- a/WebApp_Test/WebApp_Test.csproj
+++ b/WebApp_Test/WebApp_Test.csproj
@@ -198,6 +198,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\articlesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\MyUsersController.cs" />
     <Compile Include="Controllers\TablesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -207,6 +208,7 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\article.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\Tools\reg.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -4217,6 +4219,11 @@
     <Content Include="Views\Shared\_Sidebar.cshtml" />
     <Content Include="Views\Shared\_UpX.cshtml" />
     <Content Include="Views\Shared\_Table.cshtml" />
+    <Content Include="Views\MyUsers\Create.cshtml" />
+    <Content Include="Views\MyUsers\Delete.cshtml" />
+    <Content Include="Views\MyUsers\Details.cshtml" />
+    <Content Include="Views\MyUsers\Edit.cshtml" />
+    <Content Include="Views\MyUsers\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
