--- a/WebApp_Test/WebApp_Test.csproj
+++ b/WebApp_Test/WebApp_Test.csproj
@@ -212,6 +212,10 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\localDB.mdf" />
+    <Content Include="App_Data\localDB_log.ldf">
+      <DependentUpon>localDB.mdf</DependentUpon>
+    </Content>
     <Content Include="Content\adminltemvc.png" />
     <Content Include="Content\adminlte\css\AdminLTE.css" />
     <Content Include="Content\adminlte\css\AdminLTE.min.css" />
@@ -4158,6 +4162,7 @@
     <Content Include="Scripts\adminlte\components\jquery\dist\jquery.slim.min.map" />
     <Content Include="Scripts\adminlte\plugins\input-mask\phone-codes\phone-be.json" />
     <Content Include="Scripts\adminlte\plugins\input-mask\phone-codes\phone-codes.json" />
+    <None Include="Properties\PublishProfiles\ageeb.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -4210,9 +4215,7 @@
     <Content Include="Views\Shared\_UpX.cshtml" />
     <Content Include="Views\Shared\_Table.cshtml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
