--- a/WebApp_Test/Web.config
+++ b/WebApp_Test/Web.config
@@ -10,9 +10,9 @@
   </configSections>
   <connectionStrings>
 
-    
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\localDB.mdf;Initial Catalog=localDB;Integrated Security=True" providerName="System.Data.SqlClient" />
-    
+    <add name="DefaultConnection" connectionString="workstation id=ageebtest.mssql.somee.com;packet size=4096;user id=m_ageeb2000_SQLLogin_1;pwd=gwld4z3vyf;data source=ageebtest.mssql.somee.com;persist security info=False;initial catalog=ageebtest" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\localDB.mdf;Initial Catalog=localDB;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -93,10 +93,5 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <system.codedom>
-    <compilers>
-      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701" />
-      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
-    </compilers>
-  </system.codedom>
+ 
 </configuration>
