--- a/WebApp_Test/WebApp_Test.csproj
+++ b/WebApp_Test/WebApp_Test.csproj
@@ -4213,6 +4213,9 @@
     <Content Include="Views\Shared\_Sidebar.cshtml" />
     <Content Include="Views\Shared\_UpX.cshtml" />
     <Content Include="Views\Shared\_Table.cshtml" />
+    <Content Include="Views\Account\Edit.cshtml" />
+    <Content Include="Views\Account\Index.cshtml" />
+    <Content Include="Views\Account\Register.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
