Compleate Admin Work - New User - Edit User
User Work
- Edit Profile

--- a/WebApp_Test/Views/Web.config
+++ b/WebApp_Test/Views/Web.config
@@ -19,7 +19,8 @@
         <add namespace="System.Web.Routing" />
          <add namespace="Microsoft.AspNet.Identity" />
         <add namespace="WebApp_Test" />
-        
+        <add namespace="WebApp_Test.Models" />
+        <add namespace="WebApp_Test.Models.Tools" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
