--- a/WebApp_Test/WebApp_Test.csproj
+++ b/WebApp_Test/WebApp_Test.csproj
@@ -4216,6 +4216,7 @@
     <Content Include="Views\Account\Edit.cshtml" />
     <Content Include="Views\Account\Index.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
+    <Content Include="Views\Account\Edit_Prof.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
